--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@ body {
 
 .container {
   padding: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 .header {
@@ -68,7 +70,7 @@ button:hover {
 .bucket {
   position: relative;
   width: 300px;
-  height: 450px;
+  height: 90%;
   border: 3px solid black;
   border-radius: 20px;
   overflow: hidden;
@@ -86,7 +88,7 @@ button:hover {
 }
 
 .time-text {
-  font-size: 2.0rem;
+  font-size: 1.5rem;
   font-weight: bold;
   color: black;
   margin-bottom: 10px;
@@ -104,8 +106,8 @@ button:hover {
   align-items: center;
   justify-content: center;  /* optional: centers the children */
   gap: 20px;
-  height: 450px;
-  max-width: 1200px;         /* controls total width */
+  height: 70vh;
+  /* max-width: 1200px;         controls total width */
   margin-left: 50px;            
   padding: 10px;
   box-sizing: border-box;
@@ -121,21 +123,22 @@ button:hover {
 }
 
 .left {
-  width: 1000px;
+  width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .center {
-  width: 400px;
+  width: 20%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .right {
-  width: 400px;
+  width: 20%;
   text-align: left;
   font-size: 1.4rem;
   font-weight: light;
